changed lorum worlds and fixed sizes on section in main page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
   <title>Capstone Project using HTML and CSS - ABOUT PAGE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/about.css">
+
 </head>
 <body>
 
@@ -32,9 +34,9 @@
     </nav>
   </header>
 
-  <main class="">
+  <main>
     <section class="title-section mb-5 text-center">
-        <p class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE COMMONS GLOBAL SUMMIT 2021</p>
+        <h1 class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE COMMONS GLOBAL SUMMIT 2021</h1>
         <p class="description-section font-f-2 p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus posuere finibus diam, vitae fermentum justo lacinia a. Proin iaculis, nibh at sollicitudin ornare, magna neque efficitur leo, ut iaculis sapien justo in est. Fusce sit amet risus odio. Morbi porta sem nisl, ac pulvinar eros tempus non. Phasellus auctor quam augue. Etiam tempor fringilla magna, nec eleifend lacus pulvinar luctus. Aliquam tempus turpis vitae augue pulvinar placerat. Aliquam pretium, nulla non dictum volutpat, ante massa ultricies mi, et ultrices lorem tortor sed augue. Morbi vitae eleifend libero. </p>
         <p>Please contactus per Email for any further questions about CC Global Summit 2021!</p>
         <a href="#" class="font-weight-bold text-decoration-none c-black text-decoration-underline"><u>ccsummit2021@cckorea.org ></u></a>
