--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
   <title>Capstone Project using HTML and CSS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -36,7 +37,7 @@
     <section class="title-section mb-5 ml-3 mr-3">
       <h1 class="title-h1 c-orange">"Hello! Sharing World"</h1>
         <p class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE SOLUTIONS FOR ENGINEERS 2021</p>
-        <p class="description-section font-f-2 p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper lectus a laoreet dictum. Maecenas molestie dolor arcu, quis ultricies mauris malesuada eget. Ut rhoncus efficitur arcu, ut molestie lacus cursus a.</p>
+        <p class="description-section font-f-2 p-3">The global event that takes place in Korea this year will be the biggest event for engineers solutions to all problems we face in this 2021.</p>
         <h2 class="c-black font-f-1 date-title pt-2 pb-2">2021.10.18(WED) ~ 21(FRI)</h2>
         <p>@ National Musem of Korea, Art Center Nabi and more</p>
     </section>
@@ -60,8 +61,8 @@
           <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2">
             <img class="card-img-top" src="images/icon-2.jpg" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
-              <h4 class="titles-program c-orange">CC Exhibition</h4>
-              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+              <h4 class="titles-program c-orange">Exhibition</h4>
+              <p class="card-text c-white">Al the exhibitions and demostration of profucts that will we available for this new year and following.</p>
             </div>
           </div>
 
@@ -69,7 +70,7 @@
             <img class="card-img-top" src="images/icon-3.jpg" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">Forum</h4>
-              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+              <p class="card-text c-white">We will have a lot of forums about the new common techniques used by enigneers abroad.</p>
             </div>
           </div>
 
@@ -77,7 +78,7 @@
             <img class="card-img-top" src="images/icon-4.jpg" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">Workshop</h4>
-              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+              <p class="card-text c-white">Also we will have usefull Workshop to discuss the best practices even in the worst scenearios.</p>
             </div>
           </div>
 
@@ -85,14 +86,10 @@
             <img class="card-img-top" src="images/icon-5.jpg" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">CC Ignite</h4>
-              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+              <p class="card-text c-white">Dont miss the change to collab with other engineers and learn from people around the world.</p>
             </div>
           </div>
         </div>  
-
-        <!-- <div class="row"> -->
-          
-        <!-- </div> -->
 
       </div>
 
@@ -102,70 +99,76 @@
     </section>
 
 
-    <section class="feature-section container-fluid">
+    <section class="feature-section container">
 
-      <h2 class="d-flex justify-content-center pb-1">Feature Speakers</h2>
+      <h2 class=" pb-1 d-flex mx-auto justify-content-center">Feature Speakers</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/andrea.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4 d-flex"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+      <div class="speakers-article">
+        <article class="media pb-2 each-article">
+          <img class="partner-img mr-2" src="images/speaker-1.jpg" alt="speaker-1">
+          <div class="media-body">
+            <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
+            <p class="font-orange-p c-orange">Proffesor and Entreptrenurial Legal Studies</p>
+            <div class="border-gray mb-4 d-flex"></div>
+            <p class="">Smart infrastructure Planning: Energy efficient planning for infrastructure development, ICT for enhancing sustainability and resilience, and Safe and Congestion free Smart Transport systems.</p>
+          </div>
+        </article>
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-1.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+        <article class="media pb-2 each-article">
+          <img class="partner-img mr-2" src="images/speaker-2.jpg" alt="speaker-1">
+          <div class="media-body">
+            <a class="text-decoration-none c-black name-speaker" href="#">Kilnam Chon</a>
+            <p class="font-orange-p c-orange">Structural Engineer at Noribi University</p>
+            <div class="border-gray mb-4"></div>
+            <p class="">Sustainable Management of Water & Environment Systems: Approaches to Sustainable Water Resources Management, Measures for Climate Change Adaptation and Resilience</p>
+          </div>
+        </article>
+      </div>  
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-2.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+      <div class="speakers-article">
+        <article class="media pb-2 each-article">
+          <img class="partner-img mr-2" src="images/speaker-3.jpg" alt="speaker-1">
+          <div class="media-body">
+            <a class="text-decoration-none c-black name-speaker" href="#">SohYeong Noh</a>
+            <p class="font-orange-p c-orange">Proffesor of soil engineering at Korea University</p>
+            <div class="border-gray mb-4"></div>
+            <p class="">Innovative Materials And Structural Design: Innovative Construction Materials and Technologies, Structure and Soil Dynamics.</p>
+          </div>
+        </article>
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-3.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+        <article class="media pb-2 each-article">
+          <img class="partner-img img-fluid mr-2" src="images/speaker-4.jpg" alt="speaker-1">
+          <div class="media-body">
+            <a class="text-decoration-none c-black name-speaker" href="#">Julia Leda</a>
+            <p class="font-orange-p c-orange">President of ASCE and main Proffesor</p>
+            <div class="border-gray mb-4"></div>
+            <p class="">Urbanization Challenges in Emerging Economies: Energy and Water Infrastructure; Transportation Infrastructure; and Planning and Financing</p>
+          </div>
+        </article>
+      </div>
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-4.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+      <div class="speakers-article">
+        <article class="media pb-2 each-article">
+          <img class="partner-img img-fluid mr-2" src="images/speaker-5.jpg" alt="speaker-1">
+          <div class="media-body">
+            <a class="text-decoration-none c-black name-speaker" href="#">Lila Tretikov</a>
+            <p class="font-orange-p c-orange">Vice President of ASCE and main consultor of TG Engineers</p>
+            <div class="border-gray mb-4"></div>
+            <p class="">Urbanization Challenges in Emerging Economies: Resilience and Sustainability of Infrastructure</p>
+          </div>
+        </article>
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/sergio-de-paula.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+        <article class="media pb-2 each-article">
+          <img class="partner-img img-fluid mr-2" src="images/speaker-6.jpg" alt="speaker-1">
+          <div class="media-body">
+            <a class="text-decoration-none c-black name-speaker" href="#">Ryan Smith</a>
+            <p class="font-orange-p c-orange">Independant Consultor and professor of Science</p>
+            <div class="border-gray mb-4"></div>
+            <p class="">ASCE currently has members in 177 countries. International members form part of ASCE's regional structure in Region 10. </p>
+          </div>
+        </article>
+      </div>
     </section>
 
 
@@ -179,7 +182,7 @@
 
         <div class="container-fluid">
           <div class="row">
-            <img class="pt-1 pb-1 partner-img col-sm-5 mx-auto" src="images/mozilla-1.svg" alt="mozilla-logo">
+            <img class="img-sponsor-1 pt-1 pb-1 partner-img col-sm-5 mx-auto" src="images/mozilla-1.svg" alt="mozilla-logo">
             <img class="pt-1 pb-1 partner-img col-sm-5 mx-auto" src="images/logo-2.png" alt="dji-logo">
             <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-3.png" alt="google-logo">
             <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-4.png" alt="naver-logo">
