--- a/tickets.html
+++ b/tickets.html
@@ -6,7 +6,8 @@
   <title>Capstone Project using HTML and CSS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/tickets.css">
 </head>
 <body>
 
@@ -36,7 +37,7 @@
 
     <section class="main-section mt-4 pt-5 pb-4 mb-5">
 
-      <h2 class="c-black d-flex justify-content-center pb-1">Select Tickets</h2>
+      <h1 class="c-black d-flex justify-content-center pb-1">Select Tickets</h1>
       <div class="border-orange d-flex mx-auto mb-5"></div>
       <p class="text-center c-black border ml-5 mr-5 border-dark border-radius rounded"><span class="c-orange font-weight-bold"><i class="far fa-caret-square-right"></i> STEP 1 </span>  Please select the day when you want to join CC Global Summit 2021</p>
 
@@ -45,10 +46,10 @@
 
           <div class="col-sm-1 col-sm-1 col-md-1 col-lg-1"></div>
 
-          <p class="col-12 col-sm-1 col-md-2 col-lg-2 border font-weight-bold">Tickets</p>
-          <p class="col-3 col-sm-1 col-md-2 col-lg-2 border ">1-Day-Tickets</p>
-          <p class="col-6 col-sm-1 col-md-4 col-lg-4 border ">2-Day-Tickets</p>
-          <p class="col-3 col-sm-1 col-md-2 col-lg-2 border">CC Affiliate</p>
+          <p class="col-12 col-sm-2 col-md-2 col-lg-2 border font-weight-bold">Tickets</p>
+          <p class="col-3 col-sm-2 col-md-2 col-lg-2 border ">1-Day-Tickets</p>
+          <p class="col-6 col-sm-4 col-md-4 col-lg-4 border ">2-Day-Tickets</p>
+          <p class="col-3 col-sm-2 col-md-2 col-lg-2 border">CC Affiliate</p>
 
         </div>
         <div class="row">
@@ -66,20 +67,20 @@
           <div class="col-md-1 col-lg-1"></div>
 
           <p class="col-12 col-md-2 col-lg-2 border font-weight-bold">Normal</p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$200.00 <input type="checkbox" ></p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$200.00 <input type="checkbox" ></p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$400.00 <input type="checkbox" ></p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$0.00 <input type="checkbox" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$200.00 <input type="radio" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$200.00 <input type="radio" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$400.00 <input type="radio" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$0.00 <input type="radio" ></p>
         </div>
 
         <div class="row">
           <div class="col-md-1 col-lg-1"></div>
 
           <p class="col-12 col-md-2 col-lg-2 border font-weight-bold">Student</p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$100.00 <input type="checkbox" ></p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$100.00 <input type="checkbox" ></p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$200.00 <input type="checkbox" ></p>
-          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$0.00 <input type="checkbox" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$100.00 <input type="radio" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$100.00 <input type="radio" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$200.00 <input type="radio" ></p>
+          <p class="col-3 col-md-2 col-lg-2 border c-orange font-weight-bold">$0.00 <input type="radio" ></p>
 
         </div>
 
