--- a/about.html
+++ b/about.html
@@ -35,21 +35,21 @@
   </header>
 
   <main>
-    <section class="title-section mb-5 text-center">
+    <section class="title-section mb-5 text-center container-fluid">
         <h1 class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE COMMONS GLOBAL SUMMIT 2021</h1>
         <p class="description-section font-f-2 p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus posuere finibus diam, vitae fermentum justo lacinia a. Proin iaculis, nibh at sollicitudin ornare, magna neque efficitur leo, ut iaculis sapien justo in est. Fusce sit amet risus odio. Morbi porta sem nisl, ac pulvinar eros tempus non. Phasellus auctor quam augue. Etiam tempor fringilla magna, nec eleifend lacus pulvinar luctus. Aliquam tempus turpis vitae augue pulvinar placerat. Aliquam pretium, nulla non dictum volutpat, ante massa ultricies mi, et ultrices lorem tortor sed augue. Morbi vitae eleifend libero. </p>
         <p>Please contactus per Email for any further questions about CC Global Summit 2021!</p>
         <a href="#" class="font-weight-bold text-decoration-none c-black text-decoration-underline"><u>ccsummit2021@cckorea.org ></u></a>
     </section>
 
-    <section class="main-section mt-4 pt-5 pb-4 mb-5 border border-dark">
+    <section class="main-section mt-4 pt-5 pb-4 mb-5 border-dark container-fluid">
 
-      <h2 class="c-black d-flex justify-content-center pb-1">Creative Commons Global Summit 2021 Logo</h2>
+      <h2 class="c-black d-flex justify-content-center pb-1 text-center">Creative Commons Global Summit 2021 Logo</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
 
-      <div class="container-fluid ">
+      <div class="container-fluid">
         <div class="row">
-          <p class="text-center ml-1 mr-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus posuere finibus diam, vitae fermentum justo lacinia a. Proin iaculis, nibh at sollicitudin ornare, magna neque efficitur leo, ut iaculis sapien justo in est. Fusce sit amet risus odio. Morbi porta sem nisl, ac pulvinar eros tempus non. Phasellus auctor quam augue. Etiam tempor fringilla magna, nec eleifend lacus pulvinar luctus. Aliquam tempus turpis vitae augue pulvinar placerat. Aliquam pretium, nulla non dictum volutpat, ante massa ultricies mi, et ultrices lorem tortor sed augue. Morbi vitae eleifend libero. </p>
+          <p class="text-center pt-2 pb-2 ml-1 mr-1 border border-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus posuere finibus diam, vitae fermentum justo lacinia a. Proin iaculis, nibh at sollicitudin ornare, magna neque efficitur leo, ut iaculis sapien justo in est. Fusce sit amet risus odio. Morbi porta sem nisl, ac pulvinar eros tempus non. Phasellus auctor quam augue. Etiam tempor fringilla magna, nec eleifend lacus pulvinar luctus. Aliquam tempus turpis vitae augue pulvinar placerat. Aliquam pretium, nulla non dictum volutpat, ante massa ultricies mi, et ultrices lorem tortor sed augue. Morbi vitae eleifend libero. </p>
           <img class="logo-event-medium" src="images/logo-event.png" alt="">
         </div>
       </div>
