replace lorem text in footer in every page

--- a/main.html
+++ b/main.html
@@ -200,7 +200,7 @@
     <img class="logo-footer mr-2" src="images/logo-event.png" alt="event-logo">
     <div>
       <p>2021 Creative Common Korea. Rights Reserved.</p>
-      <p>Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
+      <p>"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."</p>
     </div>
   </footer>
   
