--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
       <h2 class="d-flex justify-content-center pb-1">See the past CC global Summits</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
-      <p class="d-flex justify-content-center">Take a look at the last two CC Global Summit which tool place in Buenos Aires in Warsaw</p>
+      <p class="d-flex justify-conte"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."t-center">Take a look at the last two CC Global Summit which tool place in Buenos Aires in Warsaw</p>
 
       <div class="row d-flex mx-auto">
 
@@ -87,7 +87,7 @@
     <img class="logo-footer mr-4" src="images/logo-event.png" alt="event-logo">
     <div>
       <p class="c-white font-f-2">2021 Creative Common Korea. Rights Reserved.</p>
-      <p class="c-white font-f-2">Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
+      <p class="c-white font-f-2">"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."</p>
     </div>
   </footer>
   
