--- a/tickets.html
+++ b/tickets.html
@@ -137,7 +137,7 @@
     <img class="logo-footer mr-2" src="images/logo-event.png" alt="event-logo">
     <div>
       <p class="c-white">2021 Creative Common Korea. Rights Reserved.</p>
-      <p class="c-white">Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
+      <p class="c-white">"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."</p>
     </div>
   </footer>
   
