replaced lorem text in about page in every section

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
   <main>
     <section class="title-section mb-5 text-center container-fluid">
         <h1 class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE COMMONS GLOBAL SUMMIT 2021</h1>
-        <p class="description-section font-f-2 p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus posuere finibus diam, vitae fermentum justo lacinia a. Proin iaculis, nibh at sollicitudin ornare, magna neque efficitur leo, ut iaculis sapien justo in est. Fusce sit amet risus odio. Morbi porta sem nisl, ac pulvinar eros tempus non. Phasellus auctor quam augue. Etiam tempor fringilla magna, nec eleifend lacus pulvinar luctus. Aliquam tempus turpis vitae augue pulvinar placerat. Aliquam pretium, nulla non dictum volutpat, ante massa ultricies mi, et ultrices lorem tortor sed augue. Morbi vitae eleifend libero. </p>
+        <p class="description-section font-f-2 p-3">Get access to civil engineering’s leading experts and information through our many conferences—from the ASCE Convention to specialized technical and leadership conferences. These are the perfect platforms to exchange ideas, meet a diverse group of colleagues, participate in discussions, learn about the latest innovations in your field, and earn professional development hours (PDHs), all at members-only discounts.</p>
         <p>Please contactus per Email for any further questions about CC Global Summit 2021!</p>
         <a href="#" class="font-weight-bold text-decoration-none c-black text-decoration-underline"><u>ccsummit2021@cckorea.org ></u></a>
     </section>
@@ -49,7 +49,8 @@
 
       <div class="container-fluid">
         <div class="row">
-          <p class="text-center pt-2 pb-2 ml-1 mr-1 border border-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus posuere finibus diam, vitae fermentum justo lacinia a. Proin iaculis, nibh at sollicitudin ornare, magna neque efficitur leo, ut iaculis sapien justo in est. Fusce sit amet risus odio. Morbi porta sem nisl, ac pulvinar eros tempus non. Phasellus auctor quam augue. Etiam tempor fringilla magna, nec eleifend lacus pulvinar luctus. Aliquam tempus turpis vitae augue pulvinar placerat. Aliquam pretium, nulla non dictum volutpat, ante massa ultricies mi, et ultrices lorem tortor sed augue. Morbi vitae eleifend libero. </p>
+          <p class="text-center pl-2 pr-2 pt-2 pb-2 ml-1 mr-1 border border-dark">ASCE recognizes the strategic and critical importance of advocating for and sustaining a diverse workforce and inclusive work environment. The Society is committed to implementing policies and programs designed to advance the profession by promoting an inclusive climate in the profession.
+          ASCE is continuing to monitor the COVID-19 situation both internationally and domestically with guidance from federal, state and local governments and health officials, including the CDC and WHO, in determining whether to cancel or postpone scheduled events. </p>
           <img class="logo-event-medium" src="images/logo-event.png" alt="">
         </div>
       </div>
@@ -61,19 +62,19 @@
 
       <h2 class="d-flex justify-content-center pb-1">See the past CC global Summits</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
-      <p class="d-flex justify-conte"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."t-center">Take a look at the last two CC Global Summit which tool place in Buenos Aires in Warsaw</p>
+      <p class="d-flex justify-content-center">Take a look at the last two CC Global Summit which tool place in Buenos Aires in Warsaw</p>
 
       <div class="row d-flex mx-auto">
 
         <div class="event-img-1 col-sm-12 col-md-5 col-lg-5">
           <p class="event-title c-white">Event - 2018</p>
-          <p class="text-center c-white">Lorem apsum in Buenos Aires</p>
+          <p class="text-center c-white">Conference in Buenos Aires</p>
         </div>
         <div class="col-md-2 col-lg-2"></div>
        
         <div class="event-img-2 col-sm-12 col-md-5 col-lg-5">  
           <p class="event-title c-white">Event - 2019</p>
-          <p class="text-center c-white">Lorem apsum in Tokyo</p>
+          <p class="text-center c-white">Conference in Tokyo</p>
         </div>
         
       </div>
