fixed ticket form

--- a/tickets.html
+++ b/tickets.html
@@ -43,13 +43,13 @@
 
       <form action="/" class="desktop-form mx-auto mb-5">
         <div class="container-fluid medium-hide border title-tickets">
-          <p class="font-weight-bold ">Tickets</p>
+          <p class="font-weight-bold">Tickets</p>
         </div>
-        <div class="container first-row border text-center">
+        <div class="container first-row border">
           
           <p class="font-weight-bold smaller-none each-col-width">Tickets</p>
-          <p class="each-col-width">1-Day-Ticket</p>
-          <p class="double-width">2-Day-Ticket</p>
+          <p class="each-col-width-1">1-Day-Ticket</p>
+          <p class="double-width-3">2-Day-Ticket</p>
           <p class="each-col-width">CC Afilliate</p>
 
         </div>
@@ -60,10 +60,10 @@
         </div>
         <div class="container first-row border">
           <p class="font-weight-bold smaller-none each-col-width-1">Date</p>
-          <p class="text-center double-width">15.Oct</p>
+          <p class="text-center each-col-width-3">15.Oct</p>
           <p class="each-col-width-2">16.Oct</p>
           <p class="each-col-width-2">15-16.Oct</p>
-          <p class="each-col-width-1">All</p>
+          <p class="each-col-width">All</p>
 
         </div>
 
@@ -73,16 +73,16 @@
         <div class="container first-row border">
           <p class="font-weight-bold each-col-width smaller-none ">Normal</p>
           <div class="text-center c-orange font-weight-bold pl-2 pr-2 each-col-width">
-            <p >$200.00 </p><input type="radio">
+          <label for="radio">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-2 each-col-width">
-            <p>$200.00 </p><input type="radio">
+            <label for="radio">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <p>$150.00 </p><input type="radio">
+            <label for="radio">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <p>$0.00 </p><input type="radio">
+            <label for="radio">$200.00<br><input type="radio"></label>
           </div>
           
         </div>
@@ -94,13 +94,13 @@
         <div class="container first-row border">
           <p class="font-weight-bold each-col-width smaller-none ">Student</p>
           <div class="text-center c-orange font-weight-bold pl-2 pr-2 each-col-width">
-            <p >$200.00 </p><input type="radio">
+            <label for="radio">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-2 each-col-width">
-            <p>$200.00 </p><input type="radio">
+            <label for="radio">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <p>$150.00 </p><input type="radio">
+            <label for="radio">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
             <p>$0.00 </p><input type="radio">
