fixed linter errors

--- a/tickets.html
+++ b/tickets.html
@@ -41,7 +41,7 @@
       <div class="border-orange d-flex mx-auto mb-5"></div>
       <p class="text-center c-black border ml-5 mr-5 border-dark border-radius rounded"><span class="c-orange font-weight-bold"><i class="far fa-caret-square-right"></i> STEP 1 </span>  Please select the day when you want to join CC Global Summit 2021</p>
 
-      <form action="/" class="desktop-form mx-auto mb-5">
+      <form action="/" class="desktop-form mx-auto mb-5" id="ticket-form">
         <div class="container-fluid medium-hide border title-tickets">
           <p class="font-weight-bold">Tickets</p>
         </div>
@@ -73,16 +73,16 @@
         <div class="container first-row border">
           <p class="font-weight-bold each-col-width smaller-none ">Normal</p>
           <div class="text-center c-orange font-weight-bold pl-2 pr-2 each-col-width">
-          <label for="radio">$200.00<br><input type="radio"></label>
+          <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-2 each-col-width">
-            <label for="radio">$200.00<br><input type="radio"></label>
+            <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <label for="radio">$200.00<br><input type="radio"></label>
+            <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <label for="radio">$200.00<br><input type="radio"></label>
+            <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           
         </div>
@@ -94,20 +94,21 @@
         <div class="container first-row border">
           <p class="font-weight-bold each-col-width smaller-none ">Student</p>
           <div class="text-center c-orange font-weight-bold pl-2 pr-2 each-col-width">
-            <label for="radio">$200.00<br><input type="radio"></label>
+            <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-2 each-col-width">
-            <label for="radio">$200.00<br><input type="radio"></label>
+            <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <label for="radio">$200.00<br><input type="radio"></label>
+            <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <p>$0.00 </p><input type="radio">
+            <label for="ticket-form">$200.00<br><input type="radio"></label>
           </div>
           
         </div>
-      </form>  
+      </form>
+    </section> 
 
 
     <section class="feature-section mb-5 container-fluid">
