--- a/main.html
+++ b/main.html
@@ -109,7 +109,7 @@
           <img class="partner-img mr-2" src="images/speaker-1.jpg" alt="speaker-1">
           <div class="media-body">
             <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-            <p class="font-orange-p c-orange">Proffesor and Entreptrenurial Legal Studies</p>
+            <h6 class="font-orange-p c-orange">Proffesor and Entreptrenurial Legal Studies</h6>
             <div class="border-gray mb-4 d-flex"></div>
             <p class="">Smart infrastructure Planning: Energy efficient planning for infrastructure development, ICT for enhancing sustainability and resilience, and Safe and Congestion free Smart Transport systems.</p>
           </div>
@@ -119,7 +119,7 @@
           <img class="partner-img mr-2" src="images/speaker-2.jpg" alt="speaker-1">
           <div class="media-body">
             <a class="text-decoration-none c-black name-speaker" href="#">Kilnam Chon</a>
-            <p class="font-orange-p c-orange">Structural Engineer at Noribi University</p>
+            <h6 class="font-orange-p c-orange">Structural Engineer at Noribi University</h6>
             <div class="border-gray mb-4"></div>
             <p class="">Sustainable Management of Water & Environment Systems: Approaches to Sustainable Water Resources Management, Measures for Climate Change Adaptation and Resilience</p>
           </div>
@@ -131,7 +131,7 @@
           <img class="partner-img mr-2" src="images/speaker-3.jpg" alt="speaker-1">
           <div class="media-body">
             <a class="text-decoration-none c-black name-speaker" href="#">SohYeong Noh</a>
-            <p class="font-orange-p c-orange">Proffesor of soil engineering at Korea University</p>
+            <h6 class="font-orange-p c-orange">Proffesor of soil engineering at Korea University</h6>
             <div class="border-gray mb-4"></div>
             <p class="">Innovative Materials And Structural Design: Innovative Construction Materials and Technologies, Structure and Soil Dynamics.</p>
           </div>
@@ -141,7 +141,7 @@
           <img class="partner-img img-fluid mr-2" src="images/speaker-4.jpg" alt="speaker-1">
           <div class="media-body">
             <a class="text-decoration-none c-black name-speaker" href="#">Julia Leda</a>
-            <p class="font-orange-p c-orange">President of ASCE and main Proffesor</p>
+            <h6 class="font-orange-p c-orange">President of ASCE and main Proffesor</h6>
             <div class="border-gray mb-4"></div>
             <p class="">Urbanization Challenges in Emerging Economies: Energy and Water Infrastructure; Transportation Infrastructure; and Planning and Financing</p>
           </div>
@@ -153,7 +153,7 @@
           <img class="partner-img img-fluid mr-2" src="images/speaker-5.jpg" alt="speaker-1">
           <div class="media-body">
             <a class="text-decoration-none c-black name-speaker" href="#">Lila Tretikov</a>
-            <p class="font-orange-p c-orange">Vice President of ASCE and main consultor of TG Engineers</p>
+            <h6 class="font-orange-p c-orange">Vice President of ASCE and main consultor of TG Engineers</h6>
             <div class="border-gray mb-4"></div>
             <p class="">Urbanization Challenges in Emerging Economies: Resilience and Sustainability of Infrastructure</p>
           </div>
@@ -163,7 +163,7 @@
           <img class="partner-img img-fluid mr-2" src="images/speaker-6.jpg" alt="speaker-1">
           <div class="media-body">
             <a class="text-decoration-none c-black name-speaker" href="#">Ryan Smith</a>
-            <p class="font-orange-p c-orange">Independant Consultor and professor of Science</p>
+            <h6 class="font-orange-p c-orange">Independant Consultor and professor of Science</h6>
             <div class="border-gray mb-4"></div>
             <p class="">ASCE currently has members in 177 countries. International members form part of ASCE's regional structure in Region 10. </p>
           </div>
@@ -173,7 +173,7 @@
 
 
     <section class="partner-section bg-medium-opacity mt-4 pt-5 pb-4 mb-5">
-      
+      <h2></h2>
       <article class="d-flex flex-column mx-auto">
         <div>
           <h3 class="d-flex justify-content-center pb-1">Partner</h3>
