--- a/tickets.html
+++ b/tickets.html
@@ -73,7 +73,7 @@
         <div class="container first-row border">
           <p class="font-weight-bold each-col-width smaller-none ">Normal</p>
           <div class="text-center c-orange font-weight-bold pl-2 pr-2 each-col-width">
-          <label for="ticket-form">$200.00<br><input type="radio"></label>
+          <label for="tickets-form" >$200.00<br><input type="radio" id="tickets-form"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-2 each-col-width">
             <label for="ticket-form">$200.00<br><input type="radio"></label>
