--- a/main.html
+++ b/main.html
@@ -173,7 +173,7 @@
 
 
     <section class="partner-section bg-medium-opacity mt-4 pt-5 pb-4 mb-5">
-      <h2></h2>
+      <h2 class="hide-all">empty heading</h2>
       <article class="d-flex flex-column mx-auto">
         <div>
           <h3 class="d-flex justify-content-center pb-1">Partner</h3>
