fixed form in tickets page

--- a/tickets.html
+++ b/tickets.html
@@ -41,7 +41,7 @@
       <div class="border-orange d-flex mx-auto mb-5"></div>
       <p class="text-center c-black border ml-5 mr-5 border-dark border-radius rounded"><span class="c-orange font-weight-bold"><i class="far fa-caret-square-right"></i> STEP 1 </span>  Please select the day when you want to join CC Global Summit 2021</p>
 
-      <form action="/" class="desktop-form mx-auto mb-5" id="ticket-form">
+      <form action="/">
         <div class="container-fluid medium-hide border title-tickets">
           <p class="font-weight-bold">Tickets</p>
         </div>
@@ -73,16 +73,16 @@
         <div class="container first-row border">
           <p class="font-weight-bold each-col-width smaller-none ">Normal</p>
           <div class="text-center c-orange font-weight-bold pl-2 pr-2 each-col-width">
-          <label for="tickets-form" >$200.00<br><input type="radio" id="tickets-form"></label>
+          <label for="nt" >$200.00<br><input type="radio" id="nt" name="nt"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-2 each-col-width">
-            <label for="ticket-form">$200.00<br><input type="radio"></label>
+            <label for="nt-1">$200.00<br><input type="radio" id="nt-1" name="nt-1"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <label for="ticket-form">$200.00<br><input type="radio"></label>
+            <label for="nt-2">$200.00<br><input type="radio" id="nt-2" name="nt-2"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <label for="ticket-form">$200.00<br><input type="radio"></label>
+            <label for="nt-3">$200.00<br><input type="radio" id="nt-3" name="nt-3"></label>
           </div>
           
         </div>
@@ -94,16 +94,16 @@
         <div class="container first-row border">
           <p class="font-weight-bold each-col-width smaller-none ">Student</p>
           <div class="text-center c-orange font-weight-bold pl-2 pr-2 each-col-width">
-            <label for="ticket-form">$200.00<br><input type="radio"></label>
+            <label for="nt-4">$200.00<br><input type="radio" id="nt-4" name="nt-4"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-2 each-col-width">
-            <label for="ticket-form">$200.00<br><input type="radio"></label>
+            <label for="nt-5">$200.00<br><input type="radio" id="nt-5" name="nt-5"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <label for="ticket-form">$200.00<br><input type="radio"></label>
+            <label for="nt-6">$200.00<br><input type="radio" id="nt-6" name="nt-6"></label>
           </div>
           <div class="text-center c-orange font-weight-bold border-left pl-2 pr-1 each-col-width">
-            <label for="ticket-form">$200.00<br><input type="radio"></label>
+            <label for="nt-7">$200.00<br><input type="radio" id="nt-7" name="nt-7"></label>
           </div>
           
         </div>
